@@ -20,8 +20,13 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.6.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <testSourceDirectory>src/test/java</testSourceDirectory>
@@ -36,6 +41,10 @@
                         <source>11</source>
                         <target>11</target>
                         <arg>-XDignore.symbol.file</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.security.tools.keytool=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
